adding script file

--- a/index.html
+++ b/index.html
@@ -262,26 +262,7 @@
     <!-- =================================== End Footer =============================== -->
 
     <!-- javaScript -->
-    <script>
-        var menu = document.getElementById("menu");
-        var nav = document.getElementById("nav");
-        // var a = document.getElementById("home");
-
-        
-        
-        menu.onclick = function msg() {
-            if (nav.style.left == "100%") {
-                nav.style.left = "0%";
-                menu.src = "img/icons8-cancel-64.png";
-            }
-            else {
-                nav.style.left = "100%";
-                menu.src = "img/icons8-menu-24.png";
-            }
-
-        }
-    </script>
-    <!-- End javaScript -->
+    <script src="main.js"></script>
 </body>
 
 </html>
